# FIELD

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-macos.yml  build-windows.yml
src/: BiquadFilter.cpp  BiquadFilter.h  DelayLine.cpp  DelayLine.h  HarmonicGenerator.h  ModePresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoftCeiling.h  StereoVisualization.h  TapProcessor.h
